# OpenGL-3D-Space-Game

./: CMakeLists.txt  GAME INSTRUCTIONS.txt  READFIRST!!!  README.md
include/glad/: glad.c
include/glad/glad/: glad.h
include/stb/: stb_image.cpp
lib/: glfw3.lib  zlibstatic.lib
lib/GLFW/: libglfw.so.3.2
lib/freetype/: libfreetype.so.6.5.0
src/: main.cpp  main.h
src/IO/: camera.cpp  camera.h  controls.cpp  controls.h
src/assets/models/battlecruiser/: battlecruiser.mtl  battlecruiser2.mtl  ship_experimental.blend  test_cruiser.mtl
src/assets/models/chair/: chair_01.mtl
src/assets/models/pc_screen/: screen.mtl
src/assets/models/room/: room01.mtl
src/assets/models/table/: table01.mtl
src/collision/: CollisionDetection.cpp  CollisionDetection.h
src/data/: f_cube.glsl  text.vs  vertices.h
src/misc/: callbacks.cpp  callbacks.h
src/render/: mesh.cpp  mesh.h  model.cpp  model.h  text.cpp  text.h  texture.cpp  texture.h
src/shader/: shader.cpp  shader.h
src/utility/: shape.cpp  shape.h  sound.cpp  sound.h  window.cpp  window.h
